--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,100 +5,104 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/background"
     tools:context="cse.opa.and.MainActivity">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.25"
-        android:orientation="vertical">
+        android:layout_weight="0.25">
 
         <TextView
-            android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="sans-serif-light"
             android:text="Welcome to OPAND"
-            android:textAlignment="center"
+            android:textSize="24dp"
+            android:fontFamily="sans-serif-light"
             android:textColor="#fff"
-            android:textSize="24dp" />
+            android:id="@+id/nameView"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+             />
 
         <ImageView
-            android:id="@+id/imageView2"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_gravity="center_horizontal"
+            app:srcCompat="@drawable/line"
             android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/line" />
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/imageView2" />
 
         <Button
-            android:id="@+id/btn_create_topology"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="100dp"
-            android:background="@null"
-            android:fontFamily="sans-serif-light"
             android:text="Create New Topology"
-            android:textColor="#fff"
-            android:textSize="24dp" />
-
-        <Button
-            android:id="@+id/btn_load_topology"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="100dp"
+            android:layout_marginBottom="20dp"
             android:background="@null"
+            android:textSize="24dp"
             android:fontFamily="sans-serif-light"
-            android:text="Open Topology"
             android:textColor="#fff"
-            android:textSize="24dp" />
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/btn_create_topology" />
+
+        <Button
+            android:text="Open Topology"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:textSize="24dp"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#fff"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/btn_load_topology" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
         android:layout_weight="1"
 
-        android:orientation="vertical">
+        android:layout_marginTop="20dp">
 
         <View
             android:layout_width="250dp"
             android:layout_height="1dp"
             android:layout_gravity="center"
-            android:background="#fff" />
+            android:background="#fff"/>
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif-light"
             android:text="Access your account?"
-            android:textColor="#fff"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Login"
+            android:textSize="12sp"
             android:textColor="#fff"
-            android:textSize="18sp" />
+            android:id="@+id/textView4"
+            android:fontFamily="sans-serif-light"
+            />
+
+        <Button
+            android:text="Login"
+            android:layout_width="wrap_content"
+            android:background="@null"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:id="@+id/btn_login"
+            android:textSize="18sp"
+            android:textColor="#fff"
+            android:fontFamily="sans-serif-light"
+            />
     </LinearLayout>
 
 </LinearLayout>
