--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            app:srcCompat="@drawable/line"
+            app:srcCompat="@drawable/logo"
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
             android:id="@+id/imageView2" />
