--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_sign_in"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,82 +12,124 @@
     android:background="@drawable/background"
     tools:context="cse.opa.and.SignIn">
 
-    <TextView
-        android:id="@+id/nameView"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="left"
-        android:layout_marginTop="35dp"
-        android:fontFamily="sans-serif-light"
-        android:text="Email"
-        android:textColor="#fff"
-        android:textSize="24dp" />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="0.70">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:layout_below="@+id/nameView"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp"
-        android:id="@+id/nameText"
-        android:layout_alignParentEnd="true" />
+        <ImageView
+            android:id="@+id/iv_login_logo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/logo" />
 
-    <TextView
-        android:id="@+id/textView7"
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="AND"
+            android:textColor="#fff"
+            android:textSize="26dp"
+            android:fontFamily="sans-serif-light" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/nameText"
-        android:layout_gravity="left"
-        android:layout_marginTop="35dp"
-        android:fontFamily="sans-serif-light"
-        android:text="Password"
-        android:textColor="#fff"
-        android:textSize="24dp" />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="0.8">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:layout_gravity="bottom" />
+        <EditText
+            android:id="@+id/et_login_email"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="28.5"
+            android:inputType="textEmailAddress"
+            android:hint="E-mail"
+            android:textColorHint="#9E9E9E"
+            android:textColor="@android:color/white"
+            android:fontFamily="sans-serif-light"
+            android:background="@drawable/edittext"
+            android:drawableLeft="@mipmap/ic_email"
+            android:drawablePadding="5pt" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:layout_gravity="bottom" />
+        <EditText
+            android:id="@+id/et_login_password"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="28.5"
+            android:inputType="textPassword"
+            android:hint="Password"
+            android:background="@drawable/edittext"
+            android:textColorHint="#9E9E9E"
+            android:textColor="@android:color/white"
+            android:fontFamily="sans-serif-light"
+            android:drawableLeft="@mipmap/ic_password2"
+            android:drawablePadding="5pt"/>
 
-    <EditText
-        android:id="@+id/mailText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView7"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="72dp"
-        android:ems="10"
-        android:inputType="textPassword" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:layout_gravity="bottom" />
 
-    <Button
-        android:text="Login"
-        android:layout_width="wrap_content"
-        android:background="@null"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="18sp"
-        android:textColor="#fff"
-        android:fontFamily="sans-serif-light"
-        android:layout_marginTop="77dp"
-        android:id="@+id/btn_LogIn"
-        android:layout_below="@+id/mailText"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="46dp" />
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/mailText"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_weight="23"
+            android:background="@drawable/loginbotton"
+            android:elevation="2dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="30pt"
+            android:paddingRight="30pt"
+            android:text="Login"
+            android:textColor="#000"
+            android:textSize="18sp" />
 
-    <Button
-        android:text="SignUp"
-        android:layout_width="wrap_content"
-        android:background="@null"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="18sp"
-        android:textColor="#fff"
-        android:fontFamily="sans-serif-light"
-        android:id="@+id/btn_SignUp"
-        android:layout_alignBaseline="@+id/btn_LogIn"
-        android:layout_alignBottom="@+id/btn_LogIn"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="45dp" />
+    </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="bottom" />
+        <TextView
+            android:id="@+id/tv_signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:textColor="#fff"
+            android:gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
+            android:text="Don't have an account? Sign up" />
+    </LinearLayout>
+
+</LinearLayout>
