--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,121 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_sign_up"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background"
-    tools:context="cse.opa.and.SignUp">
-    <TextView
+    tools:context="cse.opa.and.SignIn">
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="FullName"
-        android:textSize="16dp"
-        android:fontFamily="sans-serif-light"
-        android:textColor="#fff"
-        android:id="@+id/nameView"
-        android:layout_gravity="left"
-        android:layout_marginTop="35dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="0.6">
 
-    <TextView
+
+        <ImageView
+            android:id="@+id/iv_signup_logo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/logo" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="AND"
+            android:textColor="#fff"
+            android:textSize="26dp"
+            android:fontFamily="sans-serif-light" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:gravity="center"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:background="#f3f3f3"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7"
+                android:text="REGISTER"
+                android:textColor="@android:color/white"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:gravity="center"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:background="#f3f3f3"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Email"
-        android:textSize="16dp"
-        android:fontFamily="sans-serif-light"
-        android:textColor="#fff"
-        android:layout_gravity="left"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/nameText"
-        android:layout_alignParentStart="true"
-        android:id="@+id/mailView" />
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:id="@+id/mailText"
-        android:layout_marginTop="170dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="1">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="10"
+            android:layout_gravity="bottom" />
+        <EditText
+            android:id="@+id/et_signup_email"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="28.5"
+            android:inputType="textEmailAddress"
+            android:hint="E-mail"
+            android:textColorHint="#9E9E9E"
+            android:textColor="@android:color/white"
+            android:fontFamily="sans-serif-light"
+            android:background="@drawable/edittext"
+            android:drawableLeft="@mipmap/ic_email"
+            android:drawablePadding="5pt" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:layout_gravity="bottom" />
+        <EditText
+            android:id="@+id/et_signup_password"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="28.5"
+            android:inputType="textPassword"
+            android:hint="Password"
+            android:background="@drawable/edittext"
+            android:textColorHint="#9E9E9E"
+            android:textColor="@android:color/white"
+            android:fontFamily="sans-serif-light"
+            android:drawableLeft="@mipmap/ic_password2"
+            android:drawablePadding="5pt"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:layout_gravity="bottom" />
+        <EditText
+            android:id="@+id/et_signup_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="28.5"
+            android:inputType="textPassword"
+            android:hint="Confirm Password"
+            android:background="@drawable/edittext"
+            android:textColorHint="#9E9E9E"
+            android:textColor="@android:color/white"
+            android:fontFamily="sans-serif-light"
+            android:drawableLeft="@mipmap/ic_password2"
+            android:drawablePadding="5pt"/>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:ems="10"
-        android:layout_marginTop="10dp"
-        android:id="@+id/nameText"
-        android:layout_below="@+id/nameView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:layout_gravity="bottom" />
 
-    <TextView
-        android:text="Password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:fontFamily="sans-serif-light"
-        android:textColor="#fff"
-        android:layout_gravity="left"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/mailText"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/passwordView" />
+        <Button
+            android:id="@+id/btn_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/mailText"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_weight="23"
+            android:background="@drawable/loginbotton"
+            android:elevation="2dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="30pt"
+            android:paddingRight="30pt"
+            android:text="Signup"
+            android:textColor="#000"
+            android:textSize="18sp" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/passwordText"
-        android:layout_marginTop="270dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+    </LinearLayout>
 
-    <TextView
-        android:text="Confirm Password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:fontFamily="sans-serif-light"
-        android:textColor="#fff"
-        android:layout_gravity="left"
-        android:layout_marginTop="30dp"
-        android:id="@+id/confirmView"
-        android:layout_below="@+id/passwordText"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.4"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="bottom" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_marginTop="11dp"
-        android:id="@+id/confirmText"
-        android:layout_below="@+id/confirmView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+    </LinearLayout>
 
-    <Button
-        android:text="SignUp"
-        android:layout_width="wrap_content"
-        android:background="@null"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="18sp"
-        android:textColor="#fff"
-        android:fontFamily="sans-serif-light"
-        android:id="@+id/button_Signup"
-        android:layout_below="@+id/confirmText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp" />
-</RelativeLayout>
+</LinearLayout>
