--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_sign_up"
+    android:id="@+id/activity_signup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background"
-    tools:context="cse.opa.and.SignIn">
+    tools:context="cse.opa.and.LoginActivity">
 
 
     <LinearLayout
@@ -25,24 +25,13 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
             android:background="@drawable/logo" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="AND"
-            android:textColor="#fff"
-            android:textSize="26dp"
-            android:fontFamily="sans-serif-light" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            android:layout_weight="1">
+            android:layout_weight="2">
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
@@ -94,7 +83,9 @@
             android:fontFamily="sans-serif-light"
             android:background="@drawable/edittext"
             android:drawableLeft="@mipmap/ic_email"
-            android:drawablePadding="5pt" />
+            android:drawablePadding="2pt"
+            android:paddingRight="5dp"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -112,7 +103,9 @@
             android:textColor="@android:color/white"
             android:fontFamily="sans-serif-light"
             android:drawableLeft="@mipmap/ic_password2"
-            android:drawablePadding="5pt"/>
+            android:drawablePadding="2pt"
+            android:paddingRight="5dp"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -130,7 +123,8 @@
             android:textColor="@android:color/white"
             android:fontFamily="sans-serif-light"
             android:drawableLeft="@mipmap/ic_password2"
-            android:drawablePadding="5pt"/>
+            android:drawablePadding="2pt"
+            android:paddingRight="5dp"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -146,7 +140,7 @@
             android:layout_below="@+id/mailText"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:layout_weight="23"
+            android:layout_weight="28"
             android:background="@drawable/loginbotton"
             android:elevation="2dp"
             android:fontFamily="sans-serif-light"
@@ -161,7 +155,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
+        android:layout_weight="0.1"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
