--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_sign_in"
+    android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background"
-    tools:context="cse.opa.and.SignIn">
+    tools:context="cse.opa.and.LoginActivity">
 
 
     <LinearLayout
@@ -65,7 +65,9 @@
             android:fontFamily="sans-serif-light"
             android:background="@drawable/edittext"
             android:drawableLeft="@mipmap/ic_email"
-            android:drawablePadding="5pt" />
+            android:drawablePadding="2pt"
+            android:paddingRight="5dp"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -83,7 +85,8 @@
             android:textColor="@android:color/white"
             android:fontFamily="sans-serif-light"
             android:drawableLeft="@mipmap/ic_password2"
-            android:drawablePadding="5pt"/>
+            android:drawablePadding="2pt"
+            android:paddingRight="5dp"/>
 
         <TextView
             android:layout_width="match_parent"
