--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,12 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.25">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:text="Welcome to OPAND"
             android:textSize="24dp"
             android:fontFamily="sans-serif-light"
@@ -29,7 +29,7 @@
             android:id="@+id/nameView"
             android:layout_gravity="center_horizontal"
             android:textAlignment="center"
-             />
+            android:layout_weight="0.2" />
 
         <ImageView
             android:layout_width="80dp"
@@ -37,30 +37,32 @@
             app:srcCompat="@drawable/logo"
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/imageView2" />
+            android:id="@+id/imageView2"
+            android:layout_weight="0.3"/>
 
         <Button
             android:text="Create New Topology"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:layout_marginBottom="20dp"
+            android:layout_height="0dp"
+
             android:background="@null"
             android:textSize="24dp"
             android:fontFamily="sans-serif-light"
             android:textColor="#fff"
             android:layout_gravity="center_horizontal"
+            android:layout_weight="0.2"
             android:id="@+id/btn_create_topology" />
 
         <Button
             android:text="Open Topology"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="@null"
             android:textSize="24dp"
             android:fontFamily="sans-serif-light"
             android:textColor="#fff"
             android:layout_gravity="center_horizontal"
+            android:layout_weight="0.2"
             android:id="@+id/btn_load_topology" />
 
     </LinearLayout>
@@ -68,16 +70,20 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:layout_weight="0.3"
 
         android:layout_marginTop="20dp">
-
+        <View
+            android:layout_width="250dp"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+             />
         <View
             android:layout_width="250dp"
             android:layout_height="1dp"
             android:layout_gravity="center"
-            android:background="#fff"/>
+            android:background="#fff" />
 
         <TextView
             android:text="Access your account?"
