--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="AND"
+            android:text="@string/and"
             android:textColor="#fff"
             android:textSize="26dp"
             android:fontFamily="sans-serif-light" />
@@ -59,7 +59,7 @@
             android:layout_height="0dp"
             android:layout_weight="28.5"
             android:inputType="textEmailAddress"
-            android:hint="E-mail"
+            android:hint="@string/e_mail"
             android:textColorHint="#9E9E9E"
             android:textColor="@android:color/white"
             android:fontFamily="sans-serif-light"
@@ -79,7 +79,7 @@
             android:layout_height="0dp"
             android:layout_weight="28.5"
             android:inputType="textPassword"
-            android:hint="Password"
+            android:hint="@string/password"
             android:background="@drawable/edittext"
             android:textColorHint="#9E9E9E"
             android:textColor="@android:color/white"
@@ -108,7 +108,7 @@
             android:fontFamily="sans-serif-light"
             android:paddingLeft="30pt"
             android:paddingRight="30pt"
-            android:text="Login"
+            android:text="@string/login"
             android:textColor="#000"
             android:textSize="18sp" />
 
@@ -132,7 +132,7 @@
             android:textColor="#fff"
             android:gravity="center_horizontal"
             android:fontFamily="sans-serif-light"
-            android:text="Don't have an account? Sign up" />
+            android:text="@string/don_t_have_an_account_sign_up" />
     </LinearLayout>
 
 </LinearLayout>
