--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -34,7 +34,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="AND"
+            android:text="@string/and"
             android:textColor="#fff"
             android:textSize="26dp"
             android:fontFamily="sans-serif-light" />
@@ -54,7 +54,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.7"
-                android:text="REGISTER"
+                android:text="@string/register"
                 android:textColor="@android:color/white"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -88,7 +88,7 @@
             android:layout_height="0dp"
             android:layout_weight="28.5"
             android:inputType="textEmailAddress"
-            android:hint="E-mail"
+            android:hint="@string/e_mail"
             android:textColorHint="#9E9E9E"
             android:textColor="@android:color/white"
             android:fontFamily="sans-serif-light"
@@ -107,7 +107,7 @@
             android:layout_height="0dp"
             android:layout_weight="28.5"
             android:inputType="textPassword"
-            android:hint="Password"
+            android:hint="@string/password"
             android:background="@drawable/edittext"
             android:textColorHint="#9E9E9E"
             android:textColor="@android:color/white"
@@ -126,7 +126,7 @@
             android:layout_height="0dp"
             android:layout_weight="28.5"
             android:inputType="textPassword"
-            android:hint="Confirm Password"
+            android:hint="@string/confirm_password"
             android:background="@drawable/edittext"
             android:textColorHint="#9E9E9E"
             android:textColor="@android:color/white"
@@ -156,7 +156,7 @@
             android:fontFamily="sans-serif-light"
             android:paddingLeft="30pt"
             android:paddingRight="30pt"
-            android:text="Signup"
+            android:text="@string/signup"
             android:textColor="#000"
             android:textSize="18sp" />
 
