--- a/app/src/main/res/layout/activity_topology.xml
+++ b/app/src/main/res/layout/activity_topology.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="15dp"
-    tools:context="cse.opa.and.Topology"
+    tools:context="cse.opa.and.TopologyActivity"
     android:orientation="vertical"
 
     android:background="@drawable/splash">
