--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background"
+    android:background="@drawable/background_gradient"
+    android:fitsSystemWindows="true"
     tools:context="cse.opa.and.MainActivity">
 
     <LinearLayout
@@ -18,51 +19,58 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-
-        <TextView
+        <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="Welcome to OPAND"
+            android:layout_weight="1" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Welcome to AND"
             android:textSize="24dp"
             android:fontFamily="sans-serif-light"
             android:textColor="#fff"
             android:id="@+id/nameView"
             android:layout_gravity="center_horizontal"
-            android:textAlignment="center"
-            android:layout_weight="0.2" />
-
+            android:textAlignment="center" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:srcCompat="@drawable/logo"
-            android:layout_marginTop="20dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/ic_logo2"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/imageView2"
-            android:layout_weight="0.3"/>
-
+            android:id="@+id/imageView2"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
         <Button
             android:text="Create New Topology"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-
-            android:background="@null"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:paddingHorizontal="10dp"
+            android:background="@drawable/et_background"
             android:textSize="24dp"
             android:fontFamily="sans-serif-light"
             android:textColor="#fff"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.2"
             android:id="@+id/btn_create_topology" />
 
         <Button
             android:text="Open Topology"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:background="@null"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:paddingHorizontal="10dp"
+            android:background="@drawable/et_background"
             android:textSize="24dp"
             android:fontFamily="sans-serif-light"
             android:textColor="#fff"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.2"
             android:id="@+id/btn_load_topology" />
 
     </LinearLayout>
@@ -71,14 +79,11 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.3"
-
-        android:layout_marginTop="20dp">
+        android:layout_weight="0.5">
         <View
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
-             />
+            android:layout_weight="2" />
         <View
             android:layout_width="250dp"
             android:layout_height="1dp"
@@ -94,8 +99,7 @@
             android:textSize="12sp"
             android:textColor="#fff"
             android:id="@+id/textView4"
-            android:fontFamily="sans-serif-light"
-            />
+            android:fontFamily="sans-serif-light" />
 
         <Button
             android:text="Login"
@@ -107,8 +111,7 @@
             android:id="@+id/btn_login"
             android:textSize="18sp"
             android:textColor="#fff"
-            android:fontFamily="sans-serif-light"
-            />
+            android:fontFamily="sans-serif-light" />
     </LinearLayout>
 
 </LinearLayout>
