--- a/app/src/main/res/layout/activity_topology.xml
+++ b/app/src/main/res/layout/activity_topology.xml
@@ -5,12 +5,10 @@
     android:id="@+id/activity_topology"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="15dp"
     tools:context="cse.opa.and.TopologyActivity"
     android:orientation="vertical"
-
-    android:background="@drawable/splash">
+    android:fitsSystemWindows="true"
+    android:background="@drawable/background_gradient">
 
     <TextView
         android:text="Topology"
@@ -27,32 +25,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginTop="20dp"
         android:background="#fff">
 
         <ImageView
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="100dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
             app:srcCompat="@drawable/temp_topology"
-
+            android:layout_gravity="center"
             android:id="@+id/iv_topology"
             android:cropToPadding="false"
             android:adjustViewBounds="true" />
-
     </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <LinearLayout
+        android:layout_gravity="bottom"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <Button
             android:text="Save"
-            android:layout_width="50dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/btn_save_topology"
             android:layout_weight="1"
@@ -63,7 +59,7 @@
 
         <Button
             android:text="Report"
-            android:layout_width="50dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/btn_generate_report"
             android:layout_weight="1"
