Made Topology Scrollable , and fixed compilation error

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:fitsSystemWindows="true"
     android:background="@drawable/background_gradient"
-    tools:context="cse.opa.and.LoginActivity">
+    tools:context="cse.opa.and.Activity.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
