--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:background="@drawable/background_gradient"
-    tools:context="cse.opa.and.ReportActivity">
+    tools:context="cse.opa.and.Activity.ReportActivity">
 
     <TextView
         android:text="Here will be the report"
