--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,5 +8,9 @@
         <attr name="metaButtonBarStyle" format="reference" />
         <attr name="metaButtonBarButtonStyle" format="reference" />
     </declare-styleable>
+    <declare-styleable name="TopologyGraphView">
+            <attr name="square_color" format="color" />
+            <attr name="square_size" format="dimension" />
+    </declare-styleable>
 
 </resources>
