--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -1,24 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_report"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:background="@drawable/background_gradient"
     tools:context="cse.opa.and.Activity.ReportActivity">
-
-    <TextView
-        android:text="Here will be the report"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:minHeight="?android:attr/actionBarSize"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:id="@+id/tv_report"
-        android:textSize="30dp"
-        android:textColor="#fff"
-        android:layout_gravity="center_horizontal"/>
+        app:titleTextColor="@android:color/white">
+        <ImageView
+            android:id="@+id/iv_report_back"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="start"
+            android:layout_marginRight="15dp"
+            android:visibility="visible"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_back"/>
+        <TextView
+            android:text="Topology Report"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:id="@+id/textView5"
+            android:textColor="#fff"
+            android:textSize="26sp"/>
+    </android.support.v7.widget.Toolbar>
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_weight="1">
+       <TextView
+           android:id="@+id/tv_report"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="20dp"
+           android:textColor="@android:color/white"
+           android:textSize="14sp"/>
+   </ScrollView>
+    <Button
+        android:id="@+id/btn_save_report"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:textColor="@android:color/white"
+        android:text="Save Report"
+        android:visibility="gone"/>
 </LinearLayout>
