--- a/app/src/main/res/layout/devices_list_entry.xml
+++ b/app/src/main/res/layout/devices_list_entry.xml
@@ -3,19 +3,14 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingVertical="5dp">
-    <View
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+
     <ImageView
         android:id="@+id/iv_device_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_gravity="center"/>
-    <View
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.5" />
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="20dp"/>
+
     <TextView
         android:id="@+id/tv_device_name"
         android:layout_width="wrap_content"
@@ -25,8 +20,4 @@
         android:textSize="16sp"
         android:textColor="@color/black"
         android:text="Router 1"/>
-    <View
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
 </LinearLayout>
